apt-transport-storj (0.0.2) UNRELEASED; urgency=low

  * Change name to clarify scope of project

 -- paul cannon <pik@debian.org>  Sat, 11 Jul 2020 12:54:29 -0500

apt-transport-tardigrade (0.0.1) UNRELEASED; urgency=low

  * Initial Release.

 -- paul cannon <thepaul@storj.io>  Wed, 17 Jun 2020 14:01:34 +0000